--- a/source/_posts/两个模板教你讲一个打动人心的故事.md
+++ b/source/_posts/两个模板教你讲一个打动人心的故事.md
@@ -13,6 +13,7 @@ tags:
 description: '两个万能模板提升你打动人心的能力,让你再需要展现你口才的场合游刃有余'
 cover: https://s2.loli.net/2023/07/23/NkquWxLYawRJ4Gt.jpg
 ---
+
 ## 我们为什么需要拥有讲好一个故事的能力
 
 **人人都喜欢听故事,一个好故事具有感染力。**
@@ -29,7 +30,7 @@ cover: https://s2.loli.net/2023/07/23/NkquWxLYawRJ4Gt.jpg
 
 皮克斯是乔布斯支持的著名动画工作室,推出过许多优秀动画作品,他们讲故事的能力毋庸置疑是一流的。皮克斯编剧Emma Coats曾分享过一个皮克斯的故事讲述模板,大意如下:
 
-“Once upon a time there was ___. Every day, ___. One day ___. Because of that, ___. Because of that, ___. Until finally ___.”
+> Once upon a time there was ___. Every day, ___. One day ___. Because of that, ___. Because of that, ___. Until finally ___.
 
 中文大意是:
 从前,有一个___, 每天都在重复着___的生活,突然有一天,发生了___ ,正因为这件事,它___ ,也因此,它___ ,最后,它___.
@@ -40,8 +41,8 @@ cover: https://s2.loli.net/2023/07/23/NkquWxLYawRJ4Gt.jpg
 2. 每天重复着**和鹅爸爸卖面条的枯燥生活**;
 3. 突然有一天,**和平谷举办功夫大赛,阿宝意外获得神龙大侠称号**;
 4. 因此阿宝不得不学习功夫,在**龟仙人指导下苦练几有成效**; 
-5.  反派残豹逃出监牢,**要挑战新的神龙大侠**;
-6.  最终,阿宝用自己练就的功夫,在**五侠的帮助下击败残豹,和平谷恢复了宁静**。
+5. 反派残豹逃出监牢,**要挑战新的神龙大侠**;
+6. 最终,阿宝用自己练就的功夫,在**五侠的帮助下击败残豹,和平谷恢复了宁静**。
 
 这同样是一个典型且充满力量的讲故事模板
 
@@ -62,18 +63,19 @@ cover: https://s2.loli.net/2023/07/23/NkquWxLYawRJ4Gt.jpg
 
 ![](https://s2.loli.net/2023/07/23/4BcAQNelYXy3g1F.png)
 
-#### 如果你希望寻找风投,你怎么说服投资人给你大笔资金? 要记住一条投资铁律:投资人不傻
+如果你希望寻找风投,你怎么说服投资人给你大笔资金? 要记住一条投资铁律: 投资人不傻
 
 皮克斯的这个公式就可以完全套用起来~
 
-##### 1.Once upon a time==目前需要解决的问题
+1、Once upon a time==目前需要解决的问题
+
 你要说明你想解决什么问题, 比如说:
 
 美团: 人们对于在家里就可以吃上想吃的菜有着强烈的需求.
 
 特斯拉: 更智能的出行一直是懒人的不懈追求
 
-##### 2.Every day=目前的解决方案
+2、Every day=目前的解决方案
 
 现在的解决方案,已经有那些解决方案 ,为什么他们不够好, 比如:
 
@@ -81,7 +83,7 @@ cover: https://s2.loli.net/2023/07/23/NkquWxLYawRJ4Gt.jpg
 
 特斯拉: 汽车高智能化? 你再开什么玩笑,这可是关系到人身安全的.
 
-##### **3.One day=你的解决方案；**
+3、One day=你的解决方案
 
 这个时候,你需要登场了,告诉大家为什么你的方案这么做,比如:
 
@@ -89,7 +91,7 @@ cover: https://s2.loli.net/2023/07/23/NkquWxLYawRJ4Gt.jpg
 
 特斯拉: 把汽车定义为电脑加了4个轮子,采用机器学习和多摄像头识别.完全摆脱发动机-变速箱-离合器的传统模式,采用纯电方案.重新定义了汽车.
 
-##### **4.Because of that=为什么你的方案有优势？**
+4、Because of that=为什么你的方案有优势？
 
 为什么这是一个更加优秀的方案,告知潜在投资人你的优势在哪里, 比如:
 
@@ -97,7 +99,7 @@ cover: https://s2.loli.net/2023/07/23/NkquWxLYawRJ4Gt.jpg
 
 特斯拉: 电动汽车的定义者, 完全重新定义了一个新的品类:电动智能汽车.没有参照方,市值可以自由想象.
 
-##### **5.Because of that=方案优势的证据；**
+5、Because of that=方案优势的证据；
 
 这个时候需要大量的数据和支持.来证明你的方案确实是比较优秀的.比如
 
@@ -105,7 +107,7 @@ cover: https://s2.loli.net/2023/07/23/NkquWxLYawRJ4Gt.jpg
 
 特斯拉: 新标准的制定者,市场的反映超乎寻常的热烈.唯一的问题是生产跟不上.自从在中国建厂后,这个问题也不存在了.
 
-##### **6.Until finally=你会征服多大的市场；**
+6、Until finally=你会征服多大的市场；
 
 美团: 全国+东南亚市场都是想象空间
 
