--- a/source/_posts/策略不挣钱？先来跑下回测试试.md
+++ b/source/_posts/策略不挣钱？先来跑下回测试试.md
@@ -107,7 +107,7 @@ data['signal'] = np.where(data.shift(1) > 0, 1, 0)
 
 #### 高手坑：回测时数据时间序列被打乱
 
-这个问题很好理解，你想如果打乱了时间顺序，把未来发生的事提到前面来了，***模型就具有了脱离实际的“预测能力”，类似未来函数\******的错误。
+这个问题很好理解，你想如果打乱了时间顺序，把未来发生的事提到前面来了，***模型就具有了脱离实际的“预测能力”，类似未来函数***的错误。
 
 #### 高手坑： 模型选择错误
 
