--- a/source/_posts/思源在树莓派上面的安装.md
+++ b/source/_posts/思源在树莓派上面的安装.md
@@ -8,10 +8,10 @@ tags:
   - 镜像
   - 升级
   - 备份
-  - 笔记
+  - 树莓派
   - 思源笔记
   - 临时容器
-  - 启动
+  - 数据备份
 description: '总体来说,本文重点介绍了在树莓派中配置思源知识管理软件的步骤,以及软件更新和数据备份的方法,'
 cover: https://s2.loli.net/2023/08/05/LbHESJPTM593qce.png
 ---
