--- a/source/_posts/量化交易之股票历史数据收集(一).md
+++ b/source/_posts/量化交易之股票历史数据收集(一).md
@@ -153,6 +153,10 @@ while (rs.error_code == '0') & rs.next():
 result = pd.DataFrame(result_list, columns=rs.fields)
 ## 登出过程略
 ```
+### 各个库的比较
+
+附图一张，尽在图中
+![](https://s2.loli.net/2023/08/11/tocP7CUyva9Jq4W.jpg)
 
 ## 通过网页爬取数据
 
@@ -770,4 +774,4 @@ else:
 
 ## 直接购买
 
-直接购买是做没有技术含量也是效率最高的，但是还是那句话 不忘初心 方得始终。有的人的目标上罗马，有的人出生在罗马，这个是没有可比性的，愿我们早日到达心中的终点。
+直接购买是做没有技术含量也是效率最高的，但是还是那句话 不忘初心 方得始终。有的人的目标是去罗马，有的人出生在罗马，这个是没有可比性的，愿我们早日到达心中的终点。一起加油~~
