--- a/source/_posts/高频交易干货旧文分享兼回忆千千大神.md
+++ b/source/_posts/高频交易干货旧文分享兼回忆千千大神.md
@@ -13,7 +13,7 @@ tags:
   - quant1098.com
   - 删号跑路
 description: '当年千千大神说过挣到了1亿美金就公布自己的策略，估计现在已经挣到了，不知道他啥时候公布自己的策略。作为回忆旧人兼报复他言而无信。特此公布千千的付费文章一篇。哈哈'
-cover: https://s2.loli.net/2023/08/16/U62fivAZKjmWXtJ.png
+cover: https://s2.loli.net/2023/08/16/dL3D6ijvh2xQ1MJ.webp
 ---
 
 ## 缘起
@@ -128,4 +128,4 @@ cover: https://s2.loli.net/2023/08/16/U62fivAZKjmWXtJ.png
 
  惯例 附美女图片一张~~
 
-![](https://s2.loli.net/2023/08/16/U62fivAZKjmWXtJ.png)
+![](https://s2.loli.net/2023/08/16/dL3D6ijvh2xQ1MJ.webp)
