chore: 文章格式优化

--- a/source/_posts/如何通过开一个烤猪蹄店，迎娶白富美，走上人生巅峰.md
+++ b/source/_posts/如何通过开一个烤猪蹄店，迎娶白富美，走上人生巅峰.md
@@ -164,11 +164,11 @@ cover: https://s2.loli.net/2023/07/24/UPIjgd3vb8GYDXM.webp
 
 不同区域要适当加上配送费。不过我这里都有现成的操作流程,你按步骤操作后稍微修改一下就可以使用了。需要的可以私信我,我可以免费提供整套操作模块给你。
 
-#### 注意事项：
+### 注意事项
 
-1.  外卖平台操作全部完成后,可以请朋友帮忙下几单外卖,下单成功后把钱退给对方,过几个小时让他们记得给你好评,最好是带图片和文字的评价。行业里称之为“刷好评”,5条就够了。因为作为新店,没有流量和评价,一切从零开始,你的店会被平台默认排序靠后,用户点开外卖时看到你的概率很低。他们看重的主要是好评、销量、活动力度等。不过没关系,我们一步步来,先把前期准备做足。
-2.  新开外卖店,平台会提供一个“新店特权”,就是给你7天流量曝光扶持,效果还是很不错的。这个特权一个月内都有效,我们一定要合理安排,至少要基本上手后再使用,只要在一个月内,可以根据实际分次启用这个特权。一般周末外卖单较多,可以提前一天在平台设置,隔天就能生效。要提前备好货物,保证产品质量。筷子、手套等都不能少。出餐速度控制在15分钟内,尽量给顾客一个良好的首次体验,别一开始就被差评。这对你影响还是很大的。
-3.  开店后会接到很多自称外卖运营的电话,说能帮你拉单量。这些一概不要相信,通常是割韭菜。也不要在平台上充值买流量,一旦充值,平台会默认你会一直充钱,如果停止就会拉低你的店铺。自己的事要靠自己慢慢做,不懂的可以多请教有经验的老板,他们很热心地为你解答问题,你也可以问我。要相信空白期总会过去的。
+1. 外卖平台操作全部完成后,可以请朋友帮忙下几单外卖,下单成功后把钱退给对方,过几个小时让他们记得给你好评,最好是带图片和文字的评价。行业里称之为“刷好评”,5条就够了。因为作为新店,没有流量和评价,一切从零开始,你的店会被平台默认排序靠后,用户点开外卖时看到你的概率很低。他们看重的主要是好评、销量、活动力度等。不过没关系,我们一步步来,先把前期准备做足。
+2. 新开外卖店,平台会提供一个“新店特权”,就是给你7天流量曝光扶持,效果还是很不错的。这个特权一个月内都有效,我们一定要合理安排,至少要基本上手后再使用,只要在一个月内,可以根据实际分次启用这个特权。一般周末外卖单较多,可以提前一天在平台设置,隔天就能生效。要提前备好货物,保证产品质量。筷子、手套等都不能少。出餐速度控制在15分钟内,尽量给顾客一个良好的首次体验,别一开始就被差评。这对你影响还是很大的。
+3. 开店后会接到很多自称外卖运营的电话,说能帮你拉单量。这些一概不要相信,通常是割韭菜。也不要在平台上充值买流量,一旦充值,平台会默认你会一直充钱,如果停止就会拉低你的店铺。自己的事要靠自己慢慢做,不懂的可以多请教有经验的老板,他们很热心地为你解答问题,你也可以问我。要相信空白期总会过去的。
 
 ### 利润点分析
 
@@ -221,7 +221,7 @@ cover: https://s2.loli.net/2023/07/24/UPIjgd3vb8GYDXM.webp
 
 1. 控制好火候,温度不要超过250度。烤制时要适当掀开盖子查看。
 2. 高峰期可以提前烤一些备用,但不要做太多。放置时间过长会使肉质变柴。
-3.  将卤好的猪蹄取出放在托盘时要加一些卤汁浸泡,否则要放进显示柜内。这样可以防止猪蹄被风吹干导致肉质柴硬,影响口感。
+3. 将卤好的猪蹄取出放在托盘时要加一些卤汁浸泡,否则要放进显示柜内。这样可以防止猪蹄被风吹干导致肉质柴硬,影响口感。
 4. 孜然和辣椒不要加太多,本身卤制的猪蹄已经有味道,重点是达到香料渗透。
 5. 适当添加碳,别让火焰熄灭。火焰熄灭了需要等待重新点燃烤制,会影响顾客体验
 
@@ -238,8 +238,6 @@ cover: https://s2.loli.net/2023/07/24/UPIjgd3vb8GYDXM.webp
 筷子，手套都可以买得到，手套也买独立包装的省事。
 
 ![](https://s2.loli.net/2023/07/24/ZHsSqij9Bx2rGAo.webp)
-
-
 
 ### 外卖平台规划搭建
 
@@ -276,7 +274,7 @@ cover: https://s2.loli.net/2023/07/24/UPIjgd3vb8GYDXM.webp
 这是一种基本的营销活动,也是平台曝光店铺、带来流量的一种形式。可以说外卖的定价会比堂食价格高,是一种虚拟价格,目的是给消费者优惠感。例如,堂食15元的商品,在外卖平台如何定价?
 
 1. 第一阶段活动可以做满15元减10元的满减。
-2.  要开通美团会员活动,平台出资3元,商家出资4元。
+2. 要开通美团会员活动,平台出资3元,商家出资4元。
 3. 开展天天神券活动,商家出资5元。 
 4. 配送费由商家承担，平台抽成0.66%
 
@@ -316,12 +314,10 @@ cover: https://s2.loli.net/2023/07/24/UPIjgd3vb8GYDXM.webp
 
 注意：
 
-1.   高成本商品不要轻易做,比如烤猪蹄,应该根据成本定合理价格,保证至少40%的利润。
-2.  外卖和堂食价格不要让消费者觉得外卖更实惠,许多学生有时间会到店里消费。要让他们觉得到店消费对我们更划算!只在外卖上做1-2种优惠引流商品。
+1. 高成本商品不要轻易做,比如烤猪蹄,应该根据成本定合理价格,保证至少40%的利润。
+2. 外卖和堂食价格不要让消费者觉得外卖更实惠,许多学生有时间会到店里消费。要让他们觉得到店消费对我们更划算!只在外卖上做1-2种优惠引流商品。
 3. 外卖价格不合理要及时调整,活动到期及时延长。
 4. 好评差评要及时回复。关注每日曝光数据和下单转化率,正常情况下,新客和老客各占50%。 
-
-
 
 ## 总结
 
