--- a/source/_posts/策略不挣钱？先来跑下回测试试.md
+++ b/source/_posts/策略不挣钱？先来跑下回测试试.md
@@ -28,7 +28,7 @@ cover: https://s2.loli.net/2023/07/28/5ZgaXr61lwLS4qC.png
 
 感谢 刑不行老师、 千千大神，Jornason大神，扁豆子妹子，Puppy大神的文章和指导，非常感谢大神的文章和资料对我的帮助。
 
-### 回测一般会遇到的坑
+## 回测一般会遇到的坑
 
 本位不涉及财务数据之类的因子，纯粹从技术层面讨论这个坑的问题。
 
@@ -40,7 +40,7 @@ cover: https://s2.loli.net/2023/07/28/5ZgaXr61lwLS4qC.png
 
 一般来说，这些骗人的指标用了以下手法：
 
-#### 新手最初级的坑：信号发生立即成交
+### 新手最初级的坑：信号发生立即成交
 
 这里特指的时低频使用k线交易的策略，例如：
 
@@ -59,7 +59,7 @@ cover: https://s2.loli.net/2023/07/28/5ZgaXr61lwLS4qC.png
 
 > “当前K线出信号，下一根K线开盘价/限价成交”，例如上面的例子可以改为“IF Crossover(MA5[1], MA20[1]) THEN Buy(Open，...)”（根据上一根K线计算的MA5均线上穿MA20均线时，按照开盘价买入）。
 
-#### 新手次初级的坑： 未来函数
+### 新手次初级的坑： 未来函数
 
 在量化回测的时候,编写策略时经常会用到一些需要用到未来数据的函数,比如shift(),iloc[],这些函数本质上是在利用未来的数据来决定当前的交易行为。举个例子:
 
@@ -79,11 +79,11 @@ data['signal'] = np.where(data.shift(1) > 0, 1, 0)
 
 如果必须用,可以考虑设置一个期数的滞后期,让信号也滞后相应的期数,来模拟实际情况。这样可以尽量避免未来函数在回测与实盘中的偏差,使回测结果更加接近实盘交易效果。这是很多量化交易新手需要注意避免的一个坑
 
-#### 新手初级坑：幸运者偏差
+### 新手初级坑：幸运者偏差
 
 这个在股市就是回测使用了现存的所有股票回测，忘记了那些退市的股票，造成回测收益明显偏高，在币市上就是使用现存的币种，那些消失在历史的茫茫多的币种都被忽略不计了。那么，光看到好的结果，不好的结果一个都看不见，自然收益就会高很多，这个比较明显的会出现在定投类策略，和周期轮换类策略里面
 
-#### 新手坑：过拟合
+### 新手坑：过拟合
 
 我们经常会看到某些神论，比如某某品种某日必然下跌， 下跌多少点都能给你整的明明白白的。为了提高自己的权威性，往往还有图表显示他的预测历史是多么多么准确。这不是给你送救生衣，简直是给你送潜水艇来了。
 
@@ -93,7 +93,7 @@ data['signal'] = np.where(data.shift(1) > 0, 1, 0)
 
 因为预测的博主用了机器学习历史交易数据， 而且还是用的不太灵光的那种。
 
-#### 新手坑：不考虑滑点和交易成本
+### 新手坑：不考虑滑点和交易成本
 
 你个新手的万倍收益策略基本上都没考虑滑点和手续费。所以在回测过程中，交易次数越多，挣得就越多，现实情况就是，你交易次数多了发现还不够手续费。利润都被滑点和交易手续费拿走了。
 
@@ -101,23 +101,23 @@ data['signal'] = np.where(data.shift(1) > 0, 1, 0)
 
 当然，现在普遍都在使用机器学习之类进行因子挖掘，顺便也可以说说这方面的坑
 
-#### 高手坑：数据集不理想
+### 高手坑：数据集不理想
 
 如果你用得数据集，是单边行情，是大方向上涨不回头，或者单纯震荡，就没有趋势行情，那么，你在数据集上面表现优秀得策略一旦行情转换，那么收益可想而知。
 
-#### 高手坑：回测时数据时间序列被打乱
+### 高手坑：回测时数据时间序列被打乱
 
 这个问题很好理解，你想如果打乱了时间顺序，把未来发生的事提到前面来了，***模型就具有了脱离实际的“预测能力”，类似未来函数***的错误。
 
-#### 高手坑： 模型选择错误
+### 高手坑：模型选择错误
 
 这些特征值可能都分布在高维空间，一个超平面切过去就能很好划分，但是如果用二维平面的模型去拟合，比如线性回归，就会出现这样的情况。
 
-### 回测代码：
+## 回测代码
 
 剩下分享下我收集的代码，希望能对您有所帮助
 
-#### 刑不行老师的新手回测代码：
+### 刑不行老师的新手回测代码：
 
 ```python
     import pandas as pd
@@ -171,7 +171,7 @@ data['signal'] = np.where(data.shift(1) > 0, 1, 0)
 
 ```
 
-#### 千千大神的新手向回测代码：
+### 千千大神的新手向回测代码：
 
 ```python
 import pandas as pd
@@ -369,19 +369,17 @@ if __name__ == "__main__":
             )
 ```
 
-#### vnpy的回测模块
+### vnpy的回测模块
 
 ```python
 https://gitee.com/Jornason/backtesting.git
 ```
 
-#### 高手的回测代码：
+### 高手的回测代码：
 
 心中有剑，手中无剑，高手当然不用回测，直接实盘！
 
-#### 回测总结：
-
-
+### 回测总结：
 
 其实做好一个回测，需要考虑的问题很多很多， 比如手续费，模拟下单引起的订单薄的扰动， 其他对手去下订单的情况，在订单薄中冰山订单，和机器人的策略等等因素。如果你要做回测考虑到上述因素之后，就会明白，回测的结果，因为你的订单的参与会随着时间延长变得与真实情况越来越远。这远不是你获取到0ms全量orderbook数据和0ms全量trade数据所能模拟出来的。
 
