--- a/source/_posts/蝶式套利策略.md
+++ b/source/_posts/蝶式套利策略.md
@@ -31,9 +31,9 @@ cover: https://s2.loli.net/2023/07/24/r3tMkb6wBN2ZnOI.jpg
 
 如差价的均线是100，当前差价是200，下单张数是2，网格开单差价是30，则此时的持仓为：次季空6张，永续空6张，当季多12张。
 
-## 注意事项：
+## 注意事项
 
--  交割合约需单向持仓,不能同时持有多空。
+- 交割合约需单向持仓,不能同时持有多空。
 - 保证金采用全仓模式。
 - 非无脑运行策略,需理解原理后谨慎测试。
 - 回测不等于实盘,无需过分优化参数。
@@ -198,8 +198,6 @@ e.df['profit'].plot(figsize=(15,6),grid=True);
 
 ![](https://s2.loli.net/2023/07/26/HnVAPiebg5Ro8uO.png)
 
-
-
 #### LINK 收益曲线
 
 ![](https://s2.loli.net/2023/07/26/KguYJeGmDIZHjCd.png)
@@ -227,8 +225,6 @@ e.df['profit'].plot(figsize=(15,6),grid=True);
 #### DOT收益曲线
 
 ![](https://s2.loli.net/2023/07/26/gCQtHSUf15PXpom.png)
-
-
 
 ## 结论
 
