--- a/source/_posts/量化交易之股票历史数据收集(一).md
+++ b/source/_posts/量化交易之股票历史数据收集(一).md
@@ -16,8 +16,6 @@ description: '对于低频或者中频交易来说，收集历史行情数据是
 cover: https://s2.loli.net/2023/08/11/MqiRYLKPtw5Fgkc.png
 ---
 
-
-
 ## 数据获取接口的选择
 
 获取股票的数据，一般来说可以有以下几种方法：
@@ -193,8 +191,6 @@ def createConnectionPool(connstring, dbtype):
 pool = createConnectionPool(connstring, dbtype)
 ```
 
-
-
 ### 数据库操作
 
 ```python
@@ -301,8 +297,6 @@ class DBOperator(object):
             self.logger.error("Mysql Error %d: %s" % (e.args[0], e.args[1]))
 ```
 
-
-
 ### 日志模块
 
 ```python
@@ -339,8 +333,6 @@ def getLogger(name):
 if __name__ == '__main__':
     getLogger("www").debug("www")
 ```
-
-
 
 ### 获取股票历史数据- 单线程模式
 
@@ -436,8 +428,6 @@ def main():
 if __name__ == '__main__':
     main()
 ```
-
-
 
 ### 获取股票历史数据- 多线程模式
 
@@ -656,36 +646,32 @@ if __name__ == '__main__':
 
 ####  简要信息
 
-1. 发送地址
+1、发送地址
 
-   ```
-   http://qt.gtimg.cn/q=s_sh600519 // sh600519是贵州茅台的股票代码，根据自己的关键字拼接URL
-   ```
+```
+http://qt.gtimg.cn/q=s_sh600519 // sh600519是贵州茅台的股票代码，根据自己的关键字拼接URL
+```
 
-   
+2、收到信息
 
-2. 收到信息
+```
+v_s_sh600519="1~贵州茅台~600519~2075.95~42.95~2.11~38930~794942~~26078.04~GP-A";
+```
 
-   ```
-   v_s_sh600519="1~贵州茅台~600519~2075.95~42.95~2.11~38930~794942~~26078.04~GP-A";
-   ```
+3、这里代表简要信息，就是我们拼接的股票代码，后面引号内是具体查找到的股票简要信息，以“~”号分割，股票的具体信息
 
-   
-
-3. 这里代表简要信息，就是我们拼接的股票代码，后面引号内是具体查找到的股票简要信息，以“~”号分割，股票的具体信息
-
-   | 序号 | 返回值   | 含义                                                         |
-   | ---- | -------- | ------------------------------------------------------------ |
-   | 1    | 1        | 代表交易所，200-美股（us），100-港股（hk），51-深圳（sz），1-上海（sh） |
-   | 2    | 贵州茅台 | 股票名字                                                     |
-   | 3    | 600519   | 股票代码                                                     |
-   | 4    | 2075.95  | 当前价格                                                     |
-   | 5    | 42.95    | 涨跌                                                         |
-   | 6    | 2.11     | 涨跌%                                                        |
-   | 7    | 38930    | 成交量                                                       |
-   | 8    | 794942   | 成交额                                                       |
-   | 9    | 26078.04 | -                                                            |
-   | 10   | GP-A     | 总市值                                                       |
+| 序号 | 返回值   | 含义                                                         |
+| ---- | -------- | ------------------------------------------------------------ |
+| 1    | 1        | 代表交易所，200-美股（us），100-港股（hk），51-深圳（sz），1-上海（sh） |
+| 2    | 贵州茅台 | 股票名字                                                     |
+| 3    | 600519   | 股票代码                                                     |
+| 4    | 2075.95  | 当前价格                                                     |
+| 5    | 42.95    | 涨跌                                                         |
+| 6    | 2.11     | 涨跌%                                                        |
+| 7    | 38930    | 成交量                                                       |
+| 8    | 794942   | 成交额                                                       |
+| 9    | 26078.04 | -                                                            |
+| 10   | GP-A     | 总市值                                                       |
 
 #### 日K线数据  返回json格式
 
@@ -732,11 +718,11 @@ http://web.ifzq.gtimg.cn/appstock/app/minute/query?_var=min_data_sh600103&code=s
 
 ## 通过股票软件获取历史数据
 
-#### 通过通达信下载数据到本地
+### 通过通达信下载数据到本地
 
 这个就不用多说了吧
 
-#### 运行下面的代码
+### 运行下面的代码
 
 ```python
 # coding: UTF-8
