--- a/source/_posts/高价购买，无私公开！可以实盘运行的趋势策略.md
+++ b/source/_posts/高价购买，无私公开！可以实盘运行的趋势策略.md
@@ -18,7 +18,7 @@ cover: https://s2.loli.net/2023/07/27/qZBWmO9yMPUdrwj.png
 
 在实盘运行的策略中，趋势策略绝对是一个绕不过，躲不开的一个话题。
 
-## 趋势策略的优点：
+## 趋势策略的优点
 
 1. 捕捉市场趋势,盈利空间大
     趋势策略强调随着价格趋势行动,可以在较大的行情中捕捉超额收益。相比其他逆向操作策略,盈利空间更大。
