--- a/source/_posts/两个模板教你讲一个打动人心的故事.md
+++ b/source/_posts/两个模板教你讲一个打动人心的故事.md
@@ -1,193 +1,193 @@
 ---
-title: 两个万能模板提升你打动人心的能力
+title: Two universal templates to enhance your ability to impress people
 date: 2023-07-23 16:57:00
 categories:
-  - 自我提升
-tags:
-  - 模板
-  - 亲戚往来
-  - 故事
-  - 人际往来
-  - 社会
-  - 交往
-description: '两个万能模板提升你打动人心的能力,让你再需要展现你口才的场合游刃有余'
+  - Self-Improvement
+tags: 
+  - Templates
+  - Relatives
+  - Stories
+  - Interpersonal Relationships
+  - Social
+  - Social
+description: Two versatile templates to improve your ability to impress people, so you'll be comfortable in situations where you need to show your eloquence
 cover: https://s2.loli.net/2023/07/23/NkquWxLYawRJ4Gt.jpg
 ---
+## Why we need the ability to tell a good story ##
 
-## 我们为什么需要拥有讲好一个故事的能力
+**Everyone loves a good story, and a good story has a contagious effect. ** **
 
-**人人都喜欢听故事,一个好故事具有感染力。**
+The ability to tell a good story is not only important for directors and novelists, but also for us ordinary people, whether it is for branding, financing, job hunting, selling a product, seeking a promotion, or even looking for a date, we all need this ability.
 
-讲故事的能力不仅对导演和小说家很重要,对我们普通人也非常关键,无论是做品牌推广、融资、求职,还是销售产品、求升职,甚至找对象,都需要这种能力。
+Note that ** the essence of storytelling is not to create a fictional story, but a narrative logic **, how to use a coherent and reasonable way to present the facts of the organization, which is the essence of storytelling.
 
-注意,**讲故事的本质不是编造一个虚构的故事,而是一种叙事逻辑**,如何用连贯合理的方式将事实组织呈现出来,这就是讲故事的精髓。
+**Today's post will introduce you to two popular storytelling templates - **
 
-**今天这篇文章要向大家介绍两个深受欢迎的讲故事模板——**
+## First template
 
-## 第一个模板
+### Template logic
 
-### 模板逻辑
+Pixar, the famous animation studio backed by Steve Jobs, has released many excellent animation works, and their storytelling ability is undoubtedly top-notch. Pixar screenwriter Emma Coats has shared a Pixar storytelling template, which goes something like this.
 
-皮克斯是乔布斯支持的著名动画工作室,推出过许多优秀动画作品,他们讲故事的能力毋庸置疑是一流的。皮克斯编剧Emma Coats曾分享过一个皮克斯的故事讲述模板,大意如下:
+"Once upon a time there was ___. Every day, ___. One day ___. Because of that, ___. Because of that, ___. Until finally ___."
 
-> Once upon a time there was ___. Every day, ___. One day ___. Because of that, ___. Because of that, ___. Until finally ___.
+The Chinese text reads.
+Once upon a time, there was a ___, repeating ___ life every day, suddenly one day, ___ happened, because of that, it ___, because of that, it ___, Until finally, it ___.
 
-中文大意是:
-从前,有一个___, 每天都在重复着___的生活,突然有一天,发生了___ ,正因为这件事,它___ ,也因此,它___ ,最后,它___.
+As you can see from this example, not only Pixar, but most Hollywood commercial movies follow a similar simple narrative template. Take, for example, Pixar's rival DreamWorks' animated movie Kung Fu Panda.
 
-从这个例子可以看出,不仅仅是皮克斯,好莱坞大多数商业电影都遵循类似的简单叙事模板。比如皮克斯的竞争对手梦工厂的动画电影《功夫熊猫》:
+1. once upon a time, there was a **panda, Po**, who loved Kung Fu. 
+2. every day repeats the boring life of **and Papa Goose selling noodles**; 3. suddenly, one day, the panda is in the middle of the street.
+3. Suddenly, one day, a kung fu competition was held in **Peace Valley**, and Po accidentally won the title of Dragon Warrior**; 4.
+4. Therefore, Po had to learn kung fu and practiced hard under the guidance of **Turtle Immortal**; 5. 
+5. The villainous Panther escapes from the prison and challenges the new Dragon Warrior to a fight.
+6. In the end, Po uses his kung fu skills to defeat the Panther with the help of the **Five Warriors**, and peace is restored to the Valley of Peace**.
 
-1. 从前,有一只**熊猫阿宝**,非常喜欢功夫; 
-2. 每天重复着**和鹅爸爸卖面条的枯燥生活**;
-3. 突然有一天,**和平谷举办功夫大赛,阿宝意外获得神龙大侠称号**;
-4. 因此阿宝不得不学习功夫,在**龟仙人指导下苦练几有成效**; 
-5. 反派残豹逃出监牢,**要挑战新的神龙大侠**;
-6. 最终,阿宝用自己练就的功夫,在**五侠的帮助下击败残豹,和平谷恢复了宁静**。
-
-这同样是一个典型且充满力量的讲故事模板
+Again, this is a typical and powerful storytelling template!
 
 ![](https://s2.loli.net/2023/07/23/KOiqgkwr257ecSm.jpg)
 
-### 具体应用
+### Concrete application
 
-投资家Ashwin Kumar使用这个逻辑,就变成了创业者寻找风投的演讲逻辑:
+Using this logic, investor Ashwin Kumar has turned it into a presentation logic for entrepreneurs looking for VCs.
 
-| 皮克斯逻辑                     | 中文            | 融资演讲逻辑                  |
-| ------------------------------ | --------------- | ----------------------------- |
-| Once upon a time there was ___ | 从前,有一只___  | 这个领域的问题                |
-| Every day, ___                 | 每天重复着___   | 现有的解决方法                |
-| One day ___                    | 突然有一天___   | 你的解决方案                  |
-| Because of that ___            | 正因为这件事___ | 为什么你的解决方案更优?       |
-| Because of that, ___           | 也正因为如此___ | 你方案优秀的证据              |
-| Until finally ___              | 最终___         | 你未来最终可以占有多大的市场? |
+| Pixar Logic                    | Presentation Logic for Funding                               |
+| ------------------------------ | ------------------------------------------------------------ |
+| Once upon a time there was ___ | Problems in this area                                        |
+| Every day, ___                 | existing solutions                                           |
+| One day ___                    | Your solution                                                |
+| Because of that ___            | Because of that, ___                                         |
+| Because of that, ___           | Evidence for the excellence of your solution                 |
+| Until finally ___              | How much of the market can you eventually capture in the future? |
 
 ![](https://s2.loli.net/2023/07/23/4BcAQNelYXy3g1F.png)
 
-如果你希望寻找风投,你怎么说服投资人给你大笔资金? 要记住一条投资铁律: 投资人不傻
+#### If you're looking for venture capital, how do you convince an investor to give you a large sum of money? Remember the iron rule of investing: investors are not stupid.
 
-皮克斯的这个公式就可以完全套用起来~
+Pixar's formula can be applied exactly the same way.
 
-1、Once upon a time==目前需要解决的问题
+##### 1. Once upon a time == the current need to solve the problem
 
-你要说明你想解决什么问题, 比如说:
+You need to state what problem you are trying to solve, for example.
 
-美团: 人们对于在家里就可以吃上想吃的菜有着强烈的需求.
+Meituan: There is a strong demand for people to be able to eat what they want at home.
 
-特斯拉: 更智能的出行一直是懒人的不懈追求
+Tesla: Smarter mobility has always been the pursuit of lazy people.
 
-2、Every day=目前的解决方案
+##### 2. Every day=Current solutions
 
-现在的解决方案,已经有那些解决方案 ,为什么他们不够好, 比如:
+Current solutions, what solutions already exist and why they are not good enough, for example.
 
-美团: 在美团出现之前,人们只能给熟悉的饭馆刷脸打电话定菜,不能想定什么就定什么菜.挑选余地很小.
+Meituan: Before Meituan, people could only order food from familiar restaurants by swiping their face and calling the restaurant, but they couldn't order whatever they wanted. There was very little choice.
 
-特斯拉: 汽车高智能化? 你再开什么玩笑,这可是关系到人身安全的.
+Tesla: highly intelligent cars? You've got to be kidding me. It's a matter of personal safety.
 
-3、One day=你的解决方案
+##### **3. One day = your solution.
 
-这个时候,你需要登场了,告诉大家为什么你的方案这么做,比如:
+At this point, you need to come on stage and tell people why your program is doing what it is doing, for example.
 
-美团: 通过现金的互联网定餐,并配送到家,费用低廉,想吃啥有啥
+Meituan: Order food through the Internet with cash and have it delivered to your home at a low cost and eat whatever you want.
 
-特斯拉: 把汽车定义为电脑加了4个轮子,采用机器学习和多摄像头识别.完全摆脱发动机-变速箱-离合器的传统模式,采用纯电方案.重新定义了汽车.
+Tesla: defines a car as a computer with four wheels, using machine learning and multi-camera recognition. Takes away the engine-transmission-clutch paradigm and uses purely electric solutions. Redefines the automobile.
 
-4、Because of that=为什么你的方案有优势？
+##### **4.Because of that=Why is your program advantageous? **
 
-为什么这是一个更加优秀的方案,告知潜在投资人你的优势在哪里, 比如:
+Because of that=Why is this a better solution? Inform potential investors what your advantages are, e.g.
 
-美团: 互联网+ 概念.采用算法把客户, 美团小哥, 餐馆完美匹配. 从无到有创造了一个新的市场.
+Meituan: Internet+ Concept. Algorithms were used to match customers, Meituan guys, and restaurants perfectly. Created a new market from scratch.
 
-特斯拉: 电动汽车的定义者, 完全重新定义了一个新的品类:电动智能汽车.没有参照方,市值可以自由想象.
+Tesla: The definer of the electric car, completely redefining a new category: the electric smart car. No reference point, market capitalization is free to the imagination.
 
-5、Because of that=方案优势的证据；
+##### **5. Because of that=evidence of program strengths;**
 
-这个时候需要大量的数据和支持.来证明你的方案确实是比较优秀的.比如
+This time need a lot of data and support . To prove that your program is really better. For example
 
-美团: 经历的百团大战生存下来,已经证明了足够优秀.
+Meituan: Survived the Hundred Tours War, and has proved to be good enough.
 
-特斯拉: 新标准的制定者,市场的反映超乎寻常的热烈.唯一的问题是生产跟不上.自从在中国建厂后,这个问题也不存在了.
+Tesla: the new standard-bearer, the market response has been overwhelming. The only problem is that production can't keep up. Since building a factory in China, this problem doesn't exist.
 
-6、Until finally=你会征服多大的市场；
+##### **6.Until finally=how big a market will you conquer**.
 
-美团: 全国+东南亚市场都是想象空间
+Meituan: National + Southeast Asian markets are all imaginable.
 
-特斯拉: 自然是全球汽车市场.
+Tesla: naturally the global automobile market.
 
-这就是皮克斯故事模型, 是一个清晰.能打动人心的一个叙事方式. 如果每一个环节都可以做的完美.那么整体将是一个非常棒的故事.
+This is the Pixar Story Model, a clear. It's a narrative that moves people. And if every part of it is perfect. It's a great story.
 
 ![](https://s2.loli.net/2023/07/23/hBW27AydEOcsb8R.jpg)
 
-## 第二个模板
+## Second template
 
-### 模板逻辑
+### Template logic
 
-**这个讲故事的模板跟上述偏向感性的手法有所不同,他更倾向于一种可以论证的严密逻辑.**
+**This storytelling template differs from the emotional approach described above in that it favors a rigorous logic that can be argued. ** This is a different approach to storytelling than the emotional approach described above.
 
-这个方法来自于企业咨询专家Andy Raskin, 他这个方法经常被用作企业向客户推销产品.下面是他的核心逻辑:
+This approach comes from Andy Raskin, a business consultant, and is often used by companies to sell their products to customers. Here's the core of his logic.
 
-1. **开篇先讲当今世界正在发生的趋势.**
-2. **论证这个趋势下将会产生胜利者和输光了的玩家**
-3. **描述胜利者光辉的未来**
-4. **讲述如何才能享有这个光辉未来的具体方案.**
-5. **列举事例,证明你的这个产品可以帮助客户把这个方案变成现实.**
+1. **Start by talking about the trends that are happening in the world today. **This is a trend that's happening in the world today.
+2. **Argues that this trend will create winners and losers**.
+3. **Describes the glorious future of the winners.
+4. **Describes a specific program on how to enjoy this glorious future. **
+5. **Provide examples of how your product can help your customers make this program a reality. **
 
-这五步的叙事逻辑非常严密, 说服力相当强悍。
+This five-step narrative is very logical and persuasive.
 
-### 具体应用
+### Application
 
 ![](https://s2.loli.net/2023/07/23/gkXl7OmqVh34szC.jpg)
 
-下面通过一个具体的事例来说明这个逻辑的强大:
+Here's a concrete example of the power of this logic.
 
-在中国,那个行业最需要说服别人?
+In China, which industry requires the most convincing?
 
-答案是**保险行业**,因为它单纯就是出卖信任.客户花出去了真金白银,换回来的不过就是几张纸.
+The answer is **insurance**, because it's simply about selling trust. Clients spend real money, and all they get back is a piece of paper.
 
-我正好对保险行业有一点点粗浅的认识,他们开了一个推介养老年金保险的会议. 发现他们真是完美的应用了这个五步模型:
+I happened to have a cursory understanding of the insurance industry when they had a meeting to promote pension and annuity insurance. I realized that they had perfectly applied the five-step model.
 
-1. **开篇先讲当今世界正在发生的趋势.**
-    保险顾问首先描述了一个重要趋势,即中国正在走向老龄化社会,这是无可争议的事实。为了增加可信度,他引用了大量数据,从人口年龄结构变化、生育率和死亡率趋势等方面论证了这一趋势,还引用了梁建章老师的相关人口学说,极有说服力。
-2. **论证这个趋势下将会产生胜利者和输光了的玩家**
-    在描述了中国面临老龄化的大趋势后,保险顾问接着阐述了一个现象,即仅靠我们现有的养老金体系,多数人的退休生活很可能无法得到保障,生活质量会大打折扣,“延迟退休”将成为常态。
-    为了说明这一点,他使用了一张广场舞大妈旁边环卫大妈的经典照片,进一步描绘不同群体在老龄化浪潮下的境况。
-    **保险顾问表示,这可能就是将来没有养老规划和有养老规划的区别 这个结果非常震撼**
-    接下来,保险顾问继续论述,如果一个人没有任何养老规划和保障,老年生活质量极有可能会大幅下降。没有稳定的收入来源,不仅生活水平下降,还极可能需要重新就业工作,他举了日本老人在便利店收银的照片加以佐证。
-    最后,他引用了巴菲特的名言,意思是最大的风险就是没有意识到自己正面临风险,以此来强调规划的重要性
-3. **描述胜利者光辉的未来**
-    在描绘出没有养老规划的悲惨老年生活后,保险顾问首先解释了什么是被动收入这个概念,然后引用数据说明我们这一代人中约有一半可以活到90岁以上,接着指出只要提前做好养老规划,确保有足够的被动收入,老年生活同样可以非常精彩。
-    他分析了当前老人生活质量不高的一个重要原因是过度依赖子女,这剥夺了老人选择生活方式的能力。他强调,拥有高度自主性的老年生活非常重要。
-4. **讲述如何才能享有这个光辉未来的具体方案.**
-    在做完前期铺垫后,保险顾问并没有立即推销产品,而是继续系统地分析了其他养老方式如**现金养老、房养老**等的局限性。他预测房地产市场和利率市场的未来趋势,说明房地产和银行储蓄都存在一定风险,接着提出问题:有没有一种低风险且能确保老年稳定收入的养老方式?最后他提出了自己的解决方案——**养老年金保险**,并顺便介绍了公司的实力和历史沿革等信息。
-5. **列举事例,证明你的这个产品可以帮助客户把这个方案变成现实.**
-    **同时，开始给出一个表格，列出了不同年龄、不同购买额度在未来的各种收益结果。**
-    接下来,保险顾问举了两个案例:
-    第一个是企业家XX,本身家境富裕,但因疫情经营出现问题,意识到风险无所不在,于是将大笔积蓄购买了年金保险。
-    第二个是上班族XX,虽然收入不高,但是由于计划的早,在X年前就开始购买年金保险,现在只需再交几年保费就可以获得养老金了。通过这两个案例,进一步说明了年金保险在老年规划中的重要性
-    我印象最深刻的一个案例是:
-    XX女士名校毕业,曾事业顺风顺水,但在丈夫的坚持下成为了家庭主妇,生了两个孩子后身材走样,颜值下降,也无法重回职场。直到有一天,丈夫递给她一份沉甸甸的年金保单......
-    最后,保险顾问引用了塔勒布在《反脆弱》中的名言:“风吹灭蜡烛,却让炉火更旺。” 
-    通过这个案例,说明了即使条件看起来非常优越的人,也需要提前规划养老,因为生活中难免有意外,只有做好风险规划,才能让自己更加坚韧。
-    **选择年金保险，让自己在不确定性的时代，做一团火，而不是一根蜡烛。**
-    完美结束!
+1. **Open with a statement of what's happening in the world today. **This is the first step. **
+   The insurance consultant began by describing an important trend, namely the undisputed fact that China is moving towards an aging society. To add credibility, he cites a large amount of data to argue this trend in terms of changes in the age structure of the population, trends in fertility and mortality rates, etc. He also cites Mr. Leung's relevant demographic doctrines, which are extremely persuasive.
+2. **Argues that this trend will produce both winners and losing players***
+   After describing the general trend of aging in China, the insurance consultant went on to describe the phenomenon that relying on our existing pension system alone, most people's retirement life is likely to be unprotected, the quality of life will be greatly reduced, and "delayed retirement" will become the norm.
+   To illustrate this point, he used a classic photo of a square dancing lady next to a sanitation lady to further depict the situation of different groups in the aging wave.
+   **The insurance consultant said that this could be the difference between not having a retirement plan and having one in the future, a very shocking result**.
+   Next, the insurance consultant went on to argue that if a person does not have any retirement planning and protection, the quality of life in old age is very likely to be significantly reduced. Without a stable source of income, not only will one's standard of living decline, but one is also likely to have to return to the workforce, as evidenced by the photo of an elderly Japanese man working as a cashier in a convenience store.
+   Finally, he emphasized the importance of planning by quoting Warren Buffett's famous saying that the greatest risk is not realizing that you are at risk.
+3. **Describing the glorious future of the victors***
+   After depicting a miserable old age without retirement planning, the insurance consultant first explained the concept of passive income, then quoted the data to show that about half of our generation can live to be over 90 years old, and then pointed out that as long as we do a good job of planning for our retirement in advance and ensure that we have enough passive income, our old age can be very wonderful.
+   He analyzed that one of the major reasons for the current poor quality of life for the elderly is their over-reliance on their children, which deprives them of the ability to choose their lifestyle. He emphasized the importance of having a high degree of autonomy in old age.
+4. **Tells about specific programs on how to enjoy this bright future. **
+   After laying the groundwork, the insurance consultant did not sell the product immediately, but continued to systematically analyze the limitations of other retirement options such as **cash retirement and housing retirement**. He predicted the future trend of the real estate market and interest rate market, explaining that real estate and bank savings have a certain degree of risk, and then asked the question: Is there a low-risk and can ensure a stable income in old age retirement? Finally, he proposes his own solution - **pension annuity insurance** - and introduces the company's strengths and history and other information in passing.
+5. **Cite examples to prove that this product of yours can help the client to turn this program into reality. **
+   **At the same time, begin to give a table that lists the results of various benefits at different ages and different purchase amounts in the future. **
+   Next, the insurance consultant gave two examples.
+   The first is an entrepreneur XX, his family is rich, but because of the epidemic business problems, realize that the risk is omnipresent, so a large amount of savings to buy annuity insurance.
+   The second case is XX, an office worker. Although his income is not high, he started to buy annuity insurance X years ago due to early planning, and now he only needs to pay premiums for a few more years before he can get his pension. These two cases further illustrate the importance of annuity insurance in old age planning.
+   The most impressive case is: Ms. XX graduated from a prestigious university.
+   Ms. XX graduated from a prestigious university and had a smooth career, but at her husband's insistence, she became a housewife, and after giving birth to two children, she lost her body shape and face value, and was unable to return to the workplace. Until one day, her husband handed her a heavy annuity policy ......
+   Finally, the insurance consultant quoted Taleb's famous saying in Antifragile: "The wind blows out the candle, but makes the fire brighter." 
+   Through this case, it shows that even if the conditions seem to be very favorable people, but also need to plan ahead for retirement, because life is inevitable accidents, only good risk planning, in order to make themselves more resilient.
+   **Choose annuity insurance to make yourself a fire, not a candle, in times of uncertainty. **
+   Perfect end!
 
-需要强调的是,我没有贬低这位保险顾问的意思,事实上,除了个别细节略有夸张之外,他的整体叙事非常严谨、条理清晰。
+It should be emphasized that I do not mean to belittle this insurance consultant. In fact, apart from some slight exaggeration of individual details, his overall narrative is very rigorous and well-organized.
 
-**至少对我来说,这次推销是成功的,他说服了我对这类产品的认可。**
+**At least for me, the sales pitch was a success, and he convinced me to endorse the product. **
 
-在请教领导、比较同类产品后,我选择了另一家口碑较好的公司购买了年金保险产品。这位顾问的推介让我意识到了养老规划的重要性,但最终购买决定还是根据自身情况慎重考虑后做出的。
+After consulting my leaders and comparing similar products, I chose to buy an annuity product from another company with a good reputation. The consultant's recommendation made me realize the importance of retirement planning, but the final purchase decision was made after careful consideration of my own situation.
 
-## 总结
 
-没错,故事具有力量,**清晰的逻辑也具有力量**。
+## Summary
 
-我们每个人都无法像专业编剧那样去撰写电影或小说,但在日常生活中的任何表达中,遵循清晰逻辑仍然非常重要。
+Yes, stories are powerful, and so is clear logic**.
 
-例如“因为疫情,我们的收入下降了2成”和“即使有疫情,我们的收入也保住了8成”在语句含义上有区别的。
+None of us can write a movie or a novel like a professional screenwriter, but it's still important to follow clear logic in any expression in everyday life.
 
-我并不是要教大家去钻营文字技巧,不管是创业还是工作,实力才是根本。
+For example, there is a difference in meaning between "Our income has dropped by 20% because of the epidemic" and "Even with the epidemic, we have retained 80% of our income.
 
-但在有实力的前提下,思考叙事逻辑,**合理运用故事的力量,可以让我们事半功倍**。
+I'm not trying to teach you to go into wordsmithing, whether it's a business or a job, strength is fundamental.
 
-**清晰的表达和叙事**能更好地传达我们的思想和观点,这一点非常值得我们注重与掌握。
+But in the strength of the premise, thinking about the logic of the narrative, ** reasonable use of the power of storytelling, can let us do twice as much with half the effort **.
+
+**clear expression and narrative** can better convey our thoughts and ideas, which is very worthy of our attention and mastery.
 
 ![](https://s2.loli.net/2023/07/23/2zijyCNoJ5vMcRb.jpg)
